correciones 24/05-versionfusionada